--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <title>Hello, World!</title>
   <style>
     body {
-      color: #ffffff;
-      background-color: #0188cc;
+      color: black;
+      background-color: yellow;
       font-family: Arial, sans-serif;  
       font-size:14px;
     }
@@ -15,7 +15,7 @@
   <div align="center"><h1>Hello, World!</h1></div>
   <div align="center"><h2>You have successfully deployed an application using AWS CodeDeploy</h2></div>
   <div align="center">
-    <p>What to do next? Take a look through the <a href="http://docs.aws.amazon.com/codedeploy">AWS CodeDeploy Documentation</a>.</p>
+    <h1> Sup bitches! </h1>
   </div>
 </body>
 </html>
